--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.27.0",
     "mongoose": "^5.10.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "uuid": "^8.3.0"
