--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "multer-gridfs-storage": "^4.2.0",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
+    "socket.io": "^2.3.0",
     "uuid": "^8.3.0",
     "uuidv4": "^6.2.3"
   },
