--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node ./server.js",
-    "dev": "concurrently \"cd client && npm run start\"  \" cross-env NODE_ENV=development nodemon server\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "dev": "concurrently \"cd client && npm run start\"  \" cross-env NODE_ENV=development nodemon server\""
   },
   "keywords": [],
   "author": "",
